Fix Gallery wrapping on mobile, minor contentblocks fix

--- a/src/components/ContentBlocks/content-blocks.module.scss
+++ b/src/components/ContentBlocks/content-blocks.module.scss
@@ -70,10 +70,6 @@
     flex-direction: row;
     align-items: center;
   }
-
-  @media (max-width: $breakpoint-small) {
-    max-width: 80% !important;
-  }
 }
 
 .contentblocks_title {
